@@ -24,6 +24,8 @@ v2.0.0 - xx xxx xxxx
       * New "ofp-parse" for printing OpenFlow messages read from a file.
     - Added configurable flow caching support to IPFIX exporter.
     - Dropped support for Linux pre-2.6.32.
+    - Log files now report times with millisecond resolution.  (Previous
+      versions only reported whole seconds.)
 
 
 v1.11.0 - 28 Aug 2013
